unpackaged/main/default/objects/Correspondence_List__c/Correspondence_List__c.object-meta.xml
<CustomObject>
    <label>Correspondence List</label>
    <nameField>
        <displayFormat>CL-{0}</displayFormat>
        <label>Correspondence List ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correspondence Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>