unpackaged/main/default/objects/Correspondence_List__c/fields/Advisory_Commitee_Participation__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Commitee_Participation__c</fullName>
    <label>Advisory Commitee Participation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisory Committee Member</fullName>
            </value>
            <value>
                <fullName>Advisory Committee Observer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>