unpackaged/main/default/objects/Correspondence_List__c/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <label>Commitment</label>
    <referenceTo>Commitment__c</referenceTo>
    <relationshipLabel>Correspondence Lists</relationshipLabel>
    <relationshipName>Correspondence_List</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>