unpackaged/main/default/objects/Correspondence_List__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;+ Contact__r.Id, Contact__r.FirstName +&#39; &#39;+ Contact__r.LastName, &#39;_self&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>