unpackaged/main/default/objects/Correspondence_List__c/fields/Correspondence_Received__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Received__c</fullName>
    <label>Correspondence Received</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Press &amp; Announcements</fullName>
            </value>
            <value>
                <fullName>Legal Docs</fullName>
            </value>
            <value>
                <fullName>Tax Information</fullName>
            </value>
            <value>
                <fullName>Capital Calls</fullName>
            </value>
            <value>
                <fullName>Distribution Notices</fullName>
            </value>
            <value>
                <fullName>Capital Account Statements &amp; Financials</fullName>
            </value>
            <value>
                <fullName>Meeting Notifications</fullName>
            </value>
            <value>
                <fullName>Advisory Board Meeting</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Amendments</fullName>
            </value>
            <value>
                <fullName>VCOC Certificate</fullName>
            </value>
            <value>
                <fullName>Annual Meeting</fullName>
            </value>
            <value>
                <fullName>Reports &amp; News</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>