unpackaged/main/default/objects/Correspondence_List__c/fields/Limited_Partner__c.field-meta.xml
<CustomField>
    <fullName>Limited_Partner__c</fullName>
    <formula>Commitment__r.LP_Lookup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limited Partner</label>
    <type>Text</type>
</CustomField>