unpackaged/main/default/objects/Correspondence_List__c/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <formula>Commitment__r.Partnership_Lookup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership</label>
    <type>Text</type>
</CustomField>